hphp/test/slow/continue_statement/badexp.php.expectf

Fatal error: 'continue' %s non-constant operand is no%s supported in %s/test/slow/continue_statement/badexp.php on line 6
